--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -33,7 +33,7 @@ header > h1 {
     /*text-transform: uppercase; - tudo maiúsculas*/
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 10%vw;
+    font-size: 10vw;
 }
 
 header > p {
@@ -59,6 +59,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -67,12 +71,27 @@ section.normal {
 section.imagem {
     background-color: rgb(60, 60, 60);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.563);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.19);
+    background-color: rgba(0, 0, 0, 0.582);
+    text-shadow: 1px 1px 0px rgb(0, 0, 0);
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+   
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
 }
 
 footer {
